# Automatic-Differentiation-Using-Dual-Numbers-Package

./: README.md
dual_autodiff/: R1_code.ipynb  pyproject.toml
dual_autodiff/docs/source/: conf.py  dual_autodiff.ipynb  index.rst  modules.rst  sub_dual_autodiff.rst
dual_autodiff/sub_dual_autodiff/: __init__.py  dual.py
dual_autodiff/tests/: test_dual.py  test_functions.py  test_operations.py
dual_autodiff_x/: R1_code.ipynb  pyproject.toml  setup.py
dual_autodiff_x/wheelhouse/: UNKNOWN-0.0.0-cp36-cp36m-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp310-cp310-musllinux_1_2_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp37-cp37m-musllinux_1_2_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp38-cp38-musllinux_1_2_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp39-cp39-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-pp39-pypy39_pp73-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
dual_autodiff_x/wheels/: UNKNOWN-0.0.0-cp36-cp36m-musllinux_1_2_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp311-cp311-musllinux_1_2_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp312-cp312-musllinux_1_2_aarch64.whl  sub_dual_autodiff_x-0.0.1b2-cp313-cp313-musllinux_1_2_aarch64.whl  (+6 more)
(+10 files in other folders)
